# tarantella

./: CMakeLists.txt  LICENSE  README.md  version.py  version.py.in
docs/: CMakeLists.txt  LICENSE
docs/source/: advanced_topics.rst  bug_reports.rst  conf.py  contact.rst  contributing.rst  custom_train_loop.py  data_parallel.rst  faq.rst  features.rst  index.rst  installation.rst  license.rst  model.py  quick_start.rst  quick_start_custom_train_loop.py  quick_start_model.py  quick_start_model_full.py  tutorials.rst  why_tarantella.rst
src/: CMakeLists.txt  config.hpp.in  mypy.ini
src/examples/: simple_FNN_GPI.py  split_model.py
src/examples/models/: Readme.md
src/examples/models/resnet50/: imagenet_preprocessing.py  resnet50_imagenet_hvd.py  resnet50_imagenet_main.py  train_loop.py
src/examples/models/resnet56_cifar10/: cifar_preprocessing.py  resnet_cifar10_hvd.py  resnet_cifar10_main.py  resnet_cifar_model.py  train_loop.py
src/examples/models/utils/: common.py  keras_utils.py
src/examples/pipelining/: dataset_validation.py  pipelining_model.py  simple_model.py  simple_model_hardcoded.py  tnt_keras_layers.py  utilities.py  very_simple_model_hardcoded.py
src/gpi_comm_lib/: AtomicCondition.hpp  BufferElementType.cpp  BufferElementType.hpp  CMakeLists.txt  FusedTensorInfo.cpp  PipelineCommunicator.cpp  PipelineCommunicator.hpp  SynchCommunicator.cpp  SynchCommunicator.hpp  TensorAllgatherver.cpp  TensorAllgatherver.hpp  TensorAllreducer.cpp  TensorAllreducer.hpp  TensorBroadcaster.cpp  TensorBroadcaster.hpp  TensorGatherver.cpp  TensorGatherver.hpp  TensorInfo.cpp  TensorInfo.hpp  Types.hpp  pybind11_wrappers.cpp
src/gpi_comm_lib/collectives/: BufferElementType.hpp  CMakeLists.txt  FusedTensorInfo.hpp  TensorInfo.cpp  TensorInfo.hpp
src/gpi_comm_lib/collectives/allreduce/: Operator.hpp  RecursiveHalving.cpp  RecursiveHalving.hpp  RecursiveHalvingDoubleBuffer.cpp  RecursiveHalvingDoubleBuffer.hpp  RequiredResource.cpp  RequiredResource.hpp  Resource.cpp  (+4 more)
src/gpi_comm_lib/distribution/: GroupBuilder.hpp  SegmentIDBuilder.cpp  SegmentIDBuilder.hpp  utilities.cpp  utilities.hpp
src/gpi_comm_lib/gpi/: CMakeLists.txt  Context.cpp  Context.hpp  Group.cpp  Group.hpp  GroupManager.cpp  GroupManager.hpp  NotificationManager.cpp  NotificationManager.hpp  QueueManager.cpp  QueueManager.hpp  ResourceManager.cpp  ResourceManager.hpp  Segment.cpp  Segment.hpp  SegmentBuffer.cpp  SegmentBuffer.hpp  SegmentManager.cpp  SegmentManager.hpp  Types.hpp  gaspiCheckReturn.cpp  gaspiCheckReturn.hpp
src/gpi_comm_lib/tf_ops/: AllgatherOps.cpp  AllreduceOps.cpp  CMakeLists.txt  SendRecvOps.cpp  op_utils.hpp
src/runtime/: __init__.py  environment_config.py  file_management.py  logging_config.py  platform_config.py  tarantella_cleanup.py  tarantella_cli.py  tf_config.py  tnt_config.py
src/tarantella/: __init__.py  callbacks.py  dataset_helpers.py  model.py  models.py  tnt_config.py  tnt_initializer.py
src/tarantella/collectives/: TensorAllgatherer.py  TensorAllgatherver.py  TensorAllreducer.py  TensorBroadcaster.py  TensorGatherver.py  utils.py
src/tarantella/data/: __init__.py  distributed_dataset.py  gradient_scaling_callback.py  ops_helpers.py
src/tarantella/datasets/: __init__.py  dataset_helpers.py  distributed_dataset.py  gradient_scaling_callback.py  ops_helpers.py
src/tarantella/keras/: callbacks.py  layers.py  losses.py  metrics.py  model.py  models.py  pipelining_callbacks.py  sequential.py  utilities.py
src/tarantella/optimizers/: __init__.py  optimizer_wrapper.py  synchronous_distributed_optimizer.py
src/tarantella/parallel/: Barrier.py  PipelineCommunicator.py  SynchCommunicator.py  TensorAllreducer.py  TensorBroadcaster.py  utils.py
src/tarantella/strategy/: PipelineCommunicator.py  SynchCommunicator.py  parallel_model.py  parallel_strategy.py
src/tarantella/utilities/: tf_version.py
test/: CMakeLists.txt  GlobalContextFixture.hpp  ResourceManager.cpp  SynchCommunicator.cpp  TensorFusor.cpp  utilities.hpp
test/collectives/: AllreduceButterfly.cpp  AllreduceButterflyDoubleBuffer.cpp  AllreduceTestSetupGenerator.hpp  CMakeLists.txt  allreduce_basic.cpp
test/gpi/: CMakeLists.txt  Context.cpp  Group.cpp  GroupManager.cpp  NotificationManager.cpp  QueueManager.cpp  SegmentManager.cpp
test/pipelining/: CMakeLists.txt  PipelineCommunicator_4ranks.cpp  PipelineCommunicator_SendRecv_2ranks.cpp
test/python/: CMakeLists.txt  callbacks_test.py  conftest.py  coveragerc  model_api.py  model_api_mnist.py  pytest.ini  tensor_broadcaster_test.py  tensor_reducer_test.py  training_runner.py  utilities.py
test/python/callbacks/: CMakeLists.txt  callback_utilities.py  keras_callbacks.py  modelcheckpoint_callback.py  tensorboard_callback.py  user_defined_callback.py
test/python/collectives/: CMakeLists.txt  tensor_allgatherer_test.py  tensor_allgatherver_test.py  tensor_allreducer_test.py  tensor_broadcaster_test.py  tensor_gatherver_test.py
test/python/data/: distributed_micro_batching.py  transformations.py
test/python/data_parallel_training/: CMakeLists.txt  accuracy_test.py  accuracy_test_any_batch_size.py  accuracy_test_with_extra_sample.py  callbacks_test.py  custom_training_test.py  optimizerSGD_momentum_mnist_test.py  optimizers_cifar10_test.py  optimizers_mnist_test.py  step_training_test.py  weights_test.py
test/python/datasets/: CMakeLists.txt  distributed_dataset.py  distributed_micro_batching.py  transformations.py  utilities.py
test/python/model_api/: CMakeLists.txt  model_clone.py  model_distributed_evaluate.py  model_distributed_predict.py  model_inputs.py  model_save_load.py  model_save_load_configuration.py  model_save_load_state.py
test/python/models/: cifar10_models.py  mnist_models.py
test/python/pipelining_parallel/: CMakeLists.txt  hardcoded_model.py  partition_generator.py  pipeline_communicator_4ranks.py  pipeline_simple_model_2ranks.py  pipeline_simple_model_hardcoded_2ranks.py  pipeline_split_model_2ranks.py  send_recv_layers_2ranks.py
test/python/tnt_cli/: CMakeLists.txt  rank_pinning_tests.py  user_env_vars_test.py
(+111 files in other folders)
